@@ -1,4 +1,6 @@
-/* *  Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved. */
+/*
+ * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
+ */
 package com.openjiuwen.core.retrieval.indexing.processor.parser;
 
 import com.openjiuwen.core.common.exception.BaseError;
@@ -36,9 +38,9 @@ class WebPageParserTest {
         List<Document> docs = parser.parse("https://example.com/page", "doc-1", null, Map.of());
 
         assertEquals(1, docs.size());
-        assertEquals("Test Page Title", docs.getFirst().getMetadata().get("title"));
-        assertEquals("web_page", docs.getFirst().getMetadata().get("source_type"));
-        assertTrue(docs.getFirst().getText().contains("Main article content"));
+        assertEquals("Test Page Title", docs.get(0).getMetadata().get("title"));
+        assertEquals("web_page", docs.get(0).getMetadata().get("source_type"));
+        assertTrue(docs.get(0).getText().contains("Main article content"));
     }
 
     @Test
