@@ -1,4 +1,6 @@
-/* *  Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved. */
+/*
+ * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
+ */
 package com.openjiuwen.core.retrieval.query_rewriter;
 
 import com.openjiuwen.core.common.exception.BaseError;
@@ -75,7 +77,7 @@ class QueryRewriterTest {
 
         assertEquals("退货运费是谁承担", rewritten.get("standalone_query"));
         assertEquals(1, context.getMessages(null, true).size());
-        assertEquals("system", context.getMessages(null, true).getFirst().getRole());
+        assertEquals("system", context.getMessages(null, true).get(0).getRole());
         assertEquals(1, ((List<?>) rewritten.get("typo")).size());
     }
 
