@@ -1,4 +1,6 @@
-/* *  Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved. */
+/*
+ * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
+ */
 package com.openjiuwen.core.retrieval.retriever;
 
 import com.openjiuwen.core.retrieval.common.RetrievalResult;
@@ -29,7 +31,7 @@ class RetrieverDefaultMethodTest {
         List<SearchResult> results = retriever.retrieveSearchResults("query", 5, "hybrid", Map.of());
 
         assertEquals(1, results.size());
-        assertEquals("chunk-1", results.getFirst().getId());
-        assertEquals("text", results.getFirst().getText());
+        assertEquals("chunk-1", results.get(0).getId());
+        assertEquals("text", results.get(0).getText());
     }
 }
